* #877 - Make Mail::Field == other take the field value into account (kjg)
* #910 - Mail::Address should handle b_value_encoded local and domain parts (kjg)
* #719 - Fix to not extract header content that looks like its field name (kjg)
* #901 - Allow mail.text_part = '…' and mail.html_part = '<p>…</p>' (taavo)
* #872 - Low-level option to include BCC field in the encoded message (grossadamm)

== Version 2.6.3 - Mon Nov 3 23:53 +1100 2014 Mikel Lindsaar <mikel@reinteractive.net>

* #796 support uu encoding (grosser)

== Version 2.6.2 (Unreleased) - Wed Oct 22 13:42 -0500 2014 Benjamin Fleischer <github@benjaminfleischer.com>

Performance:
* #681 - fewer hotspot object allocations (srawlins)
* #815 - autoload parsers for load-time speed and memory usage (grosser)

Bugs:
* #736 - Mail.new copes with non-UTF8 messages marked as UTF8 (jeremy)

== Version 2.6.1 - Sun Jun 8 15:34 +1100 2014 Mikel Lindsaar <mikel@reinteractive.net>

Features:
* Silence warnings on loading ragel-generated parsers (bf4)

== Version 2.6.0 - Mon Jun 2 22:49 +1100 2014 Mikel Lindsaar <mikel@reinteractive.net>

Features:
* Allow interceptors and observers to be unregistered (zuhao)
* Added feature to find the mail in uid (taketin)
* Save settings passed to TestMailer#new (svanderbleek)
* Allow the setting of envelope from directly (jeremy)
* Accept other IETF/IANA-registered Content-Types and Content-Transfer-Encodings (jeremy)
* Alias shift-jis charset to Shift_JIS Ruby encoding (jeremy)
* Add support for ks_c_5601-1987 charset, aliased to CP949 Ruby encoding (jeremy)
* Don't allow colons in header names (jeremy)
* Can assign arrays of Message-IDs to References and In-Reply-To (jeremy)
* Setting the html_ or text_part sets a default text/html or text/plain content type (jeremy)
* Setting the html_ or text_part to nil removes it (jeremy)
* Addresses without a parsable email or display name still format as their raw text (jeremy)